Updated AI generation onto local machine

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch
+torchvision
+torchaudio
 flask
 Pillow
 stability_sdk
 rembg
+transformers
