--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
---extra-index-url https://download.pytorch.org/whl/cu116
+--pre
 torch
 torchvision
 torchaudio
+--force-reinstall
+--index-url https://download.pytorch.org/whl/cu118
+
+cuda-python
 flask
 Pillow
 stability_sdk
-rembg
 transformers
 pyopenssl
 super_image
+
+--upgrade diffusers[torch]
+
+#pip3 install numpy --pre torch torchvision torchaudio --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu118
