--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
---pre
+--index-url https://download.pytorch.org/whl/cu118
 torch
 torchvision
 torchaudio
---force-reinstall
---index-url https://download.pytorch.org/whl/cu118
 
 cuda-python
 flask
 Pillow
-stability_sdk
 transformers
 pyopenssl
 super_image
 
---upgrade diffusers[torch]
+# --upgrade diffusers[torch]
 
 #pip3 install numpy --pre torch torchvision torchaudio --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu118
