--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,15 @@
 torch
 torchvision
 torchaudio
---force-reinstall
 --index-url https://download.pytorch.org/whl/cu118
 
-cuda-python
 flask
 Pillow
 stability_sdk
 transformers
 pyopenssl
 super_image
-
---upgrade diffusers[torch]
+cuda-python
 
 #pip3 install numpy --pre torch torchvision torchaudio --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu118
+#pip install --upgrade diffusers[torch]
